--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,10 @@
 // bower:scss
+@import "bower_components/reset-css/_reset.scss";
 // endbower
+
+// base
+@import 'base/variables';
+@import 'base/utils';
 
 .browserupgrade {
   margin: 0.2em 0;
@@ -8,8 +13,35 @@
   padding: 0.2em 0;
 }
 
-body {
-  //background: #fafafa;
-  //font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  //color: #333;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  font-family: $open-sans;
+  color: $base-color;
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1210px; // 1170
+  padding: 0 20px;
+  width: 100%;
+}
+
+// shared components
+@import 'components/text';
+
+// blocks
+@import 'header';
