--- a/app/styles/components/_text.scss
+++ b/app/styles/components/_text.scss
@@ -6,6 +6,9 @@
 
   // size (typography scale)
   &.mod-small { font-size: 13px; }
+  &.mod-regular { font-size: 16px; }
+  &.mod-big { font-size: 22px; }
+  &.mod-large { font-size: 42px; }
 
   // color
   //&.mod-gray {}
