--- a/app/styles/components/_text.scss
+++ b/app/styles/components/_text.scss
@@ -7,6 +7,7 @@
   // size (typography scale)
   &.mod-small { font-size: 13px; }
   &.mod-regular { font-size: 16px; }
+  &.mod-medium { font-size: 18px; }
   &.mod-big { font-size: 22px; }
   &.mod-large { font-size: 42px; }
 
