Add bottom section background. Add customer photo. Add line white. Add fontello icons. Add input component. Update title comp. Implement contact, footer and customers section.

--- a/app/styles/components/_title.scss
+++ b/app/styles/components/_title.scss
@@ -20,4 +20,12 @@
       display: none;
     }
   }
+
+  &.mod-white {
+    color: #fff;
+
+    &::after {
+      content: url('../../images/line-white.png');
+    }
+  }
 }
