Move some styles (blocks). Implement some media queries. Implement anchors. Update markup. Introduce carousel (using slick js). Add icons. Add images. Customize slick styles.

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -8,5 +8,6 @@ $raleway: 'Raleway', sans-serif;
 $open-sans: 'Open Sans', sans-serif;
 
 // queries (use only mobile first - min width queries)
+$large-screen-up: 992px;
 $medium-screen-up: 769px;
 $small-screen-up: 480px;
