--- a/app/styles/blocks/_contact.scss
+++ b/app/styles/blocks/_contact.scss
@@ -1,5 +1,5 @@
 .bottom-wrapper {
-  background: #000 url('../images/contact-bg.jpg');
+  background: #000 url('../../images/contact-bg.jpg');
   background-size: cover;
   min-height: 680px;
   width: 100%;
