--- a/app/styles/blocks/_customers.scss
+++ b/app/styles/blocks/_customers.scss
@@ -1,13 +1,19 @@
 .customers {
-  margin: 0 0 183px;
+  margin: 0 0 127px;
 }
 
 .customers__title {
-  margin: 129px 0 0;
+  margin: 130px 0 0;
 }
 
 .customers__container {
   margin: 30px 0 0;
+}
+
+.customer__photo {
+  display: block;
+  margin: 0 auto;
+  max-width: 100px;
 }
 
 .customer__name,
@@ -18,7 +24,7 @@
 }
 
 .customer__name {
-  margin: 20px 0 0;
+  margin: 21px 0 0;
 }
 
 .customer__company {
@@ -45,4 +51,10 @@
     top: 30px;
     width: 50px;
   }
+}
+
+.customers__switchers {
+  margin: 45px 0 0;
+  text-align: center;
+  width: 100%;
 }
