--- a/app/styles/blocks/_team.scss
+++ b/app/styles/blocks/_team.scss
@@ -19,14 +19,27 @@
   &:last-child {
     margin: 0;
   }
+
+  &:hover {
+    .team__info {
+      //display: block;
+      transform: translate(0, 0) scale(1);
+    }
+
+    .team__name {
+      color: $primary-color;
+    }
+  }
 }
 
 .team__block {
   font-size: 0;
   position: relative;
+  overflow: hidden;
 }
 
 .team__info {
+  //display: none;
   background-color: rgba(#0eb493, .85);
   color: #fff;
   height: 100%;
@@ -36,12 +49,16 @@
   text-align: center;
   top: 0;
   width: 100%;
+  transform: translate(-100%, 100%) scale(0.5);
+  //transform: translate(0, 100%);
+  transition: transform .3s ease-out;
 }
 
 .team__subtitle,
 .team__desc {
   margin: 0 auto;
   max-width: 230px;
+  padding: 0 10px;
 }
 
 .team__subtitle {
@@ -63,6 +80,32 @@
   height: 42px;
   margin: 0 4px 0 0;
   width: 42px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 42px;
+  transition: background-color .3s ease;
+
+  &::before {
+    font-family: 'fontello';
+  }
+
+  &.mod-twitter::before {
+    content: '\f099';
+  }
+
+  &.mod-facebook::before {
+    content: '\f09a';
+  }
+
+  &.mod-google::before {
+    content: '\f30f';
+  }
+
+  &:hover {
+    background-color: rgba(#000, .7);
+  }
+
 }
 
 .team__name {
