--- a/app/styles/blocks/_watch.scss
+++ b/app/styles/blocks/_watch.scss
@@ -22,14 +22,33 @@
 .watch__social-link {
   background-color: #0098cd;
   border-radius: 100%;
+  font-size: 32px;
+  text-align: center;
+  color: #fff;
   display: block;
   float: left;
   height: 68px;
+  line-height: 68px;
   margin: 0 20px 0 0;
+  text-decoration: none;
   transition: background-color .3s ease;
   width: 68px;
 
-  //&::before {}
+  &::before {
+    font-family: 'fontello';
+  }
+
+  &.mod-apple::before {
+    content: '\f179';
+  }
+
+  &.mod-android::before {
+    content: '\f17b';
+  }
+
+  &.mod-windows::before {
+    content: '\f17a'
+  }
 
   &:hover {
     background-color: #222;
@@ -37,8 +56,8 @@
 }
 
 .watch__container {
-  margin: 73px 0 0;
   border-radius: 8px;
+  margin: 73px 0 0;
   max-width: 500px;
   overflow: hidden;
   width: 51.282051282051%;
