Update gitignore. Update features styles, rename features__title -> features__heading. Improve team section (responsive design, etc). Improve watch section (responsive). Small updates.

--- a/app/styles/blocks/_features.scss
+++ b/app/styles/blocks/_features.scss
@@ -1,3 +1,7 @@
+.features__title {
+  margin: 114px 0 0;
+}
+
 .features__intro {
   display: block;
   line-height: 36px;
@@ -47,7 +51,7 @@
   display: table-cell;
 }
 
-.features__title {
+.features__heading {
   font-family: $raleway;
   line-height: 18px;
   margin: 0 0 12px;
