--- a/app/styles/blocks/_team.scss
+++ b/app/styles/blocks/_team.scss
@@ -1,5 +1,3 @@
-.team {}
-
 .team__title {
   margin: 88px 0 0;
 }
@@ -13,33 +11,39 @@
 
 .team__item {
   display: block;
-  margin: 0 2.564102564103% 0 0;
-  width: 23.076923076923%;
+  float: none;
+  margin: 0 auto 20px;
+  max-width: 270px;
+  width: 100%;
 
   &:last-child {
-    margin: 0;
+    margin: 0 auto 20px;
+    @media (min-width: $large-screen-up) { margin: 0; }
   }
 
   &:hover {
-    .team__info {
-      //display: block;
-      transform: translate(0, 0) scale(1);
-    }
+    .team__info { transform: translate(0, 0) scale(1); }
+    .team__name { color: $primary-color; }
+  }
 
-    .team__name {
-      color: $primary-color;
-    }
+  @media (min-width: $medium-screen-up) {
+    float: left;
+    width: 50%;
+  }
+
+  @media (min-width: $large-screen-up) {
+    margin: 0 2.564102564103% 0 0;
+    width: 23.076923076923%;
   }
 }
 
 .team__block {
   font-size: 0;
-  position: relative;
   overflow: hidden;
+  position: relative;
 }
 
 .team__info {
-  //display: none;
   background-color: rgba(#0eb493, .85);
   color: #fff;
   height: 100%;
@@ -48,10 +52,9 @@
   right: 0;
   text-align: center;
   top: 0;
-  width: 100%;
   transform: translate(-100%, 100%) scale(0.5);
-  //transform: translate(0, 100%);
   transition: transform .3s ease-out;
+  width: 100%;
 }
 
 .team__subtitle,
@@ -76,36 +79,23 @@
 
 .team__link {
   background-color: rgba(#000, .3);
-  display: inline-block;
-  height: 42px;
-  margin: 0 4px 0 0;
-  width: 42px;
   color: #fff;
-  text-decoration: none;
+  display: inline-block;
   font-size: 24px;
+  height: 42px;
   line-height: 42px;
+  margin: 0 4px 0 0;
+  text-decoration: none;
   transition: background-color .3s ease;
+  width: 42px;
 
-  &::before {
-    font-family: 'fontello';
-  }
+  &::before { font-family: 'fontello'; }
 
-  &.mod-twitter::before {
-    content: '\f099';
-  }
+  &.mod-twitter::before { content: '\f099'; }
+  &.mod-facebook::before { content: '\f09a'; }
+  &.mod-google::before { content: '\f30f'; }
 
-  &.mod-facebook::before {
-    content: '\f09a';
-  }
-
-  &.mod-google::before {
-    content: '\f30f';
-  }
-
-  &:hover {
-    background-color: rgba(#000, .7);
-  }
-
+  &:hover { background-color: rgba(#000, .7); }
 }
 
 .team__name {
