--- a/app/styles/blocks/_watch.scss
+++ b/app/styles/blocks/_watch.scss
@@ -5,7 +5,9 @@
 }
 
 .watch__desc {
-  width: 48.717948717949%;
+  padding: 0 20px 0 0;
+  width: 100%;
+  @media (min-width: $medium-screen-up) { width: 48.717948717949%; }
 }
 
 .watch__title {
@@ -22,33 +24,22 @@
 .watch__social-link {
   background-color: #0098cd;
   border-radius: 100%;
-  font-size: 32px;
-  text-align: center;
   color: #fff;
   display: block;
   float: left;
+  font-size: 32px;
   height: 68px;
   line-height: 68px;
   margin: 0 20px 0 0;
+  text-align: center;
   text-decoration: none;
   transition: background-color .3s ease;
   width: 68px;
 
-  &::before {
-    font-family: 'fontello';
-  }
-
-  &.mod-apple::before {
-    content: '\f179';
-  }
-
-  &.mod-android::before {
-    content: '\f17b';
-  }
-
-  &.mod-windows::before {
-    content: '\f17a'
-  }
+  &::before { font-family: 'fontello'; }
+  &.mod-apple::before { content: '\f179'; }
+  &.mod-android::before { content: '\f17b'; }
+  &.mod-windows::before { content: '\f17a' }
 
   &:hover {
     background-color: #222;
@@ -57,8 +48,14 @@
 
 .watch__container {
   border-radius: 8px;
-  margin: 73px 0 0;
-  max-width: 500px;
+  margin: 73px 0 50px;
+  max-width: 100%;
   overflow: hidden;
-  width: 51.282051282051%;
+  width: 100%;
+
+  @media (min-width: $medium-screen-up) {
+    max-width: 500px;
+    width: 51.282051282051%;
+    margin: 73px 0 0;
+  }
 }
