--- a/app/styles/blocks/_contact.scss
+++ b/app/styles/blocks/_contact.scss
@@ -114,6 +114,7 @@
   border: 0;
   border-radius: 3px;
   color: #fff;
+  cursor: pointer;
   font-family: $open-sans;
   font-size: 22px;
   height: 50px;
